gitops/newsgenie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsgenie
  namespace: newsgenie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newsgenie
  template:
    metadata:
      labels:
        app: newsgenie
    spec:
      containers:
        - name: newsgenie
          image: akramsiddiqui/newsgenie
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
