gitops/newsgenie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: newsgenie
  namespace: newsgenie
spec:
  selector:
    app: newsgenie
  ports:
    - name: http
      port: 80
      targetPort: 8501
  type: ClusterIP
